fixed portfolio spacing

--- a/src/portfolio.scss
+++ b/src/portfolio.scss
@@ -1,12 +1,13 @@
 .portfolio-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    padding: 10px;
 }
 .portfolio {
-    margin: 20px;
+    margin: 15px;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, .25);
-    padding: 25px 20px;
+    padding: 25px 15px;
     display: grid;
     grid-template-columns: 1fr;
     justify-content: space-between;
